<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.screens.main_page.RepositoriesPageFragment">

    <ProgressBar
        android:id="@+id/first_load_progress_bar"
        android:layout_marginTop="35dp"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Space
        android:id="@+id/space_view_problem"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/first_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/first_line_message_error"
        android:textAllCaps="false"
        android:textColor="@color/black_text"
        android:textSize="17sp"
        android:textStyle="normal"
        android:visibility="gone" />

    <TextView
        android:id="@+id/second_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/second_line_message_error"
        android:textAllCaps="false"
        android:textColor="@color/grey_text"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_view_try_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:text="@string/try_again"
        android:textAllCaps="false"
        android:textColor="@color/purple_text_try_again"
        android:textSize="16sp"
        android:textStyle="normal"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repositories_recycler_view"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>