<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.details_page.DetailsPageFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/white">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/grey_element"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="@id/space"/>

                <ImageView
                    android:id="@+id/image_owner"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/text_view_full_name_repository"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/black_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="18dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    app:layout_constraintTop_toBottomOf="@id/image_owner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/text_view_login"
                    android:textSize="13sp"
                    android:textColor="@color/grey_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_full_name_repository"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/text_view_pre_commiter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:text="@string/commit_s_owner"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/space"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ProgressBar
                    android:id="@+id/progress_bar_is_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space"/>

                <TextView
                    android:id="@+id/text_view_commiter_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:textColor="@color/black_text"
                    android:textStyle="italic"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/space"
                    app:layout_constraintStart_toEndOf="@id/text_view_pre_commiter_name"/>

                <TextView
                    android:id="@+id/text_view_pre_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/publish_date"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_commiter_name"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_view_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/grey_text"
                    android:textStyle="normal"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_commiter_name"
                    app:layout_constraintStart_toEndOf="@id/text_view_pre_date"/>

                <TextView
                    android:id="@+id/text_view_pre_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/message"
                    android:textColor="@color/black_text"
                    android:textStyle="bold"
                    android:layout_marginStart="14dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="12dp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_date"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/text_view_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textColor="@color/black_text"
                    android:textStyle="italic"
                    android:gravity="start"
                    android:layout_marginStart="22dp"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintTop_toBottomOf="@id/text_view_pre_message"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:id="@+id/image_view_button_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:background="@drawable/ic_arrow_go_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/first_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/first_line_message_error"
                    android:textAllCaps="false"
                    android:textColor="@color/black_text"
                    android:textSize="17sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/space" />

                <TextView
                    android:id="@+id/second_line"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/second_line_message_error"
                    android:textAllCaps="false"
                    android:textColor="@color/grey_text"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/first_line" />

                <TextView
                    android:id="@+id/text_view_try_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center_horizontal"
                    android:text="@string/try_again"
                    android:textAllCaps="false"
                    android:textColor="@color/purple_text_try_again"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/second_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/text_view_list_sha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:text="@string/list_sha"
            android:textColor="@color/black_text"
            android:textStyle="bold"
            android:layout_marginStart="14dp"
            android:layout_marginTop="12dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_sha"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>